--- a/resources/css/fonts.css
+++ b/resources/css/fonts.css
@@ -65,54 +65,6 @@
 }
 
 @font-face {
-	font-family: "quadon-medium";
-	src: url("../fonts/quadon/Quadon-Medium.woff") format("woff");
-    font-weight: 400;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "quadon-bold";
-	src: url("../fonts/quadon/Quadon-Bold.woff") format("woff");
-	font-weight: 500;
-	font-style: normal;
-	font-display: swap;
-  }
-
-@font-face {
-	font-family: "gentona-light";
-	src: url("../fonts/gentona/Gentona-Light.woff") format("woff");
-	font-weight: 300;
-	font-style: normal;
-	font-display: fallback;
-}
-
-@font-face {
-	font-family: "gentona-book";
-	src: url("../fonts/gentona/Gentona-Book.woff") format("woff");
-	font-weight: 400;
-	font-style: normal;
-	font-display: fallback;
-}
-
-@font-face {
-	font-family: "gentona-semibold";
-	src: url("../fonts/gentona/Gentona-SemiBold.woff") format("woff");
-	font-weight: 600;
-	font-style: normal;
-	font-display: fallback;
-}
-
-@font-face {
-	font-family: "gentona-bold";
-	src: url("../fonts/gentona/Gentona-Bold.woff") format("woff");
-	font-weight: 700;
-	font-style: normal;
-	font-display: fallback;
-}
-
-@font-face {
     font-family: 'icomoon';
     src:url('../fonts/icomoon/icomoon.eot');
     src:url('../fonts/icomoon/icomoon.eot?#iefix') format('embedded-opentype'),
